# webinar-open-template

./: CMakeLists.txt  func_template_specialization.cpp  funс_template.cpp  motivation.cpp  policy.cpp  template_type.cpp  template_val.cpp
